// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.identity.clients;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "personal-website-v2/go-apis/identity/clients;clients";

// Proto file describing the Client.

// The client.
message Client {
    // The unique ID to identify the client.
    uint64 id = 1;

    // The client type.
    ClientTypeEnum.ClientType type = 2;

    // It stores the date and time at which the client was created.
    google.protobuf.Timestamp created_at = 3;

    // The user ID to identify the user who created the client.
    uint64 created_by = 4;

    // It stores the date and time at which the client was updated.
    google.protobuf.Timestamp updated_at = 5;

    // The user ID to identify the user who updated the client.
    uint64 updated_by = 6;

    // The client status.
    ClientStatus status = 7;

    // It stores the date and time at which the client status was updated.
    google.protobuf.Timestamp status_updated_at = 8;

	// The user ID to identify the user who updated the client status.
    uint64 status_updated_by = 9;

    // Optional. The client status comment.
    google.protobuf.StringValue status_comment = 10;

    // Optional. The app ID.
    google.protobuf.UInt64Value app_id = 11;

    // Optional. The first User-Agent.
    google.protobuf.StringValue first_user_agent = 12;

    // Optional. The last User-Agent.
    google.protobuf.StringValue last_user_agent = 13;

    // The last activity time.
    google.protobuf.Timestamp last_activity_time = 14;

    // The last activity IP address.
    string last_activity_ip = 15;
}

// Container for enum describing the client type.
message ClientTypeEnum {
    // The client type.
    enum ClientType {
        // Unspecified. Do not use.
        UNSPECIFIED = 0;
        WEB = 1;
        MOBILE = 2;
    }
}

// The client status.
enum ClientStatus {
    // Unspecified. Do not use.
    CLIENT_STATUS_UNSPECIFIED = 0;
    NEW = 1;
    PENDING_APPROVAL = 2;
    ACTIVE = 3;
    LOCKED_OUT = 4;
    TEMPORARILY_LOCKED_OUT = 5;
    DISABLED = 6;
    DELETING = 7;
    DELETED = 8;
}
